# ComfyUI-RectumFire

./: .gitignore  .tracking  LICENSE  NOTICE  README.md  README.zh-CN.md  REGISTRY_SETUP.md  ROADMAP.md  SPONSORS.md  __init__.py  fire_banner.py  fire_done.py  fire_mask.py  fire_note.py  fire_route.py  fire_switch.py  fire_timer.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: cleanup_rectumfire_pending.yml  publish_action.yml  release_rectumfire.yml  update_registry_metadata.yml
js/: Thumbs.db  fire_banner.js  fire_copy.js  fire_done.js  fire_label.js  fire_label_axis.js  fire_mask.js  fire_note.js  fire_resolve.js  fire_sketch.js  fire_switch.js  fire_test.js  fire_timer.js  fire_toster.js
js/assets/: Thumbs.db
screens/: Thumbs.db
trash/: fire_banner!.js  fire_chkload.js  fire_chkload.py  fire_ckpt_cover_api.py  fire_color.js  fire_copy - Copy.js  fire_gif.js  fire_gif.py  fire_resolve - Copy.js  fire_route.js  fire_saveimage.py  fire_sigma.js  fire_sigma.py
