[project]
name = "rectumfire"
version = "1.0.2"
description = "Daily-use ComfyUI utilities for workflow repair, subgraph previews, clean switching, and better run feedback."
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/vladgohn/ComfyUI-RectumFire"
Documentation = "https://github.com/vladgohn/ComfyUI-RectumFire#readme"
"Bug Tracker" = "https://github.com/vladgohn/ComfyUI-RectumFire/issues"

[tool.comfy]
PublisherId = "vladgohn"
DisplayName = "RectumFire"
Icon = "https://raw.githubusercontent.com/vladgohn/ComfyUI-RectumFire/main/branding/icon.jpg"
requires-comfyui = ">=1.0.0"
